test/errors/stmt_annotation_invalid_target.py
clas% C: x = __debug__
