test/errors/stmt_annotation_invalid_target.py.expected
test/errors/stmt_annotation_invalid_target.py:1 error: cannot assign to expression
